<resources>
    <string name="unsign_in_tip">您还没有登录哦</string>
    <string name="app_login_sign_in">立即登录</string>
    <string name="exit_app">再按一次返回退出程序</string>
    <string name="at_once_taste">立即体验</string>
    <string name="app_name">RunLegwork</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="hint_please_input_user_name">请输入手机号</string>
    <string name="user_password">密码</string>
    <string name="user_newpassword">新密码</string>
    <string name="user_password1">确认密码</string>
    <string name="user_checknum">请输入验证码</string>
    <string name="hint_please_input_password">请输入密码</string>
    <string name="hint_please_input_confirm_password">请再次输入密码</string>
    <string name="at_once_register">注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="user_info">个人资料</string>
    <string name="home">首页</string>
    <string name="nearby">附近</string>
    <string name="my">我的</string>
    <string name="more">更多</string>
    <string name="order">订单</string>
    <string name="mine">我的</string>
    <string name="discover">发现</string>
    <string name="main_title">SCUD</string>
    <string name="push_task">需求发布</string>
    <string name="jie_task">需求大厅</string>
    <string name="custom_serivce">技能发布</string>
    <string name="send_a_single">我要派单</string>
    <string name="pick_up_a_single">我要接单</string>
    <string name="precise_positioning">精准定位</string>
    <string name="time_sale">时间出售</string>
    <string name="tag_dialog_single_choice_menuitem">tag_dialog_single_choice_menuitem</string>
    <string name="accountprofile_title">个人信息</string>
    <string name="bai_du_key_error">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="netword_is_unable">网络链接不可用，请稍后重试</string>
    <string name="near_detail">详细信息</string>
    <string name="header_icon">头像</string>
    <string name="save_count">保存</string>
    <string name="my_push_need">我的需求</string>
    <string name="my_push_scope">需求类型</string>
    <string name="my_push_detail">详情描述</string>
    <string name="my_push_time">邀约时间</string>
    <string name="my_push_address">邀约地点</string>
    <string name="my_push_money">愿付酬金</string>
    <string name="my_push_confirm">确认发布</string>
    <string name="please_enter_your_need">请输入您的需求</string>
    <string name="please_enter_your_scope">请输入需求类型</string>
    <string name="please_enter_your_detail">请输入需求详细描述</string>
    <string name="please_enter_your_address">请输入邀约地点，需要是公共地点</string>
    <string name="select_time">选择日期</string>
    <string name="my_skill_need">我的技能</string>
    <string name="my_skill_price">价&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;格</string>
    <string name="my_skill_detail">技能详情</string>
    <string name="my_skill_show">作品展示</string>
    <string name="my_skill_price_hours">元/小时</string>
    <string name="my_skill_price_chuang">元/场</string>
    <string name="my_skill_price_hf_day">元/半天</string>
    <string name="my_skill_price_day">元/天</string>
    <string name="my_skill_remarks">备注</string>
    <string name="my_skill_online">线上</string>
    <string name="my_skill_unonline">线下</string>
    <string name="please_fill_your_skill_name">填写你的技能</string>
    <string name="please_fill_your_skill_price">请填写合理的价格</string>
    <string name="please_fill_your_skill_remarks">如需要提前预约</string>
    <string name="please_fill_your_skill_detail">请填写您的技能的特色，以吸引更多人的关注，如经验，成绩，好评&#8230;</string>
    <string name="massage">按摩</string>
    <string name="homekeeping">家政</string>
    <string name="housekeeping">陪聊</string>
    <string name="shop">商店</string>
    <string name="success">success</string>
    <string name="push_skill_success">发布技能成功</string>
    <string name="push_skill_failed">发布技能失败</string>
    <string name="save_order_success">接单成功</string>
    <string name="save_order_faild">接单失败</string>
    <string name="order_detail">订单详情</string>
    <string name="have_answer_order">已有%s人接单</string>
    <string name="confirm">确定</string>
    <string name="skill">技能</string>
    <string name="home_show_fuc">热门推荐</string>
    <string name="home_show_other">其他</string>
    <string name="push_order_tips">温馨提示：愿付酬金是直接担保到快约系统平台,当邀约完成 后，由您选择“邀约完成”，便会将此费用支付给邀约者。 </string>
    <string name="select_type">选择类型</string>
    <string name="tab_on">正在进行</string>
    <string name="tab_unon">已经完成</string>
    <string name="tab_order_text">已应邀</string>
    <string name="top_title">已发布需求详情</string>
    <string name="order_item_title">有几个人愿意完成你的需求，请确认</string>
    <string name="order_confirm">确认接单</string>
    <string name="talk">聊天</string>
    <string name="phone">电话</string>
    <string name="already_confirm">已确认</string>
	<string name="send_order">发起订单</string>
    <string name="loading_data">正在加载数据&#8230;</string>
    <string name="loading_data_failed">加载数据失败</string>
    <string name="open_btn_text">免费开通</string>
    <string name="hint_open_shop_name">您的商店名称(开店后可更改)</string>
    <string name="hine_open_shop_detail">请简单描述下您的商店</string>
    <string name="shop_gps">店铺GPS定位</string>
    <string name="shop_icon">店铺头像</string>
    <string name="shop_name">店铺名称</string>
    <string name="shop_ad">店铺广告语</string>
    <string name="shop_type">店铺类型</string>
    <string name="shop_address">店铺地址</string>
    <string name="shop_phone">联系电话</string>
    <string name="shop_last_price">起价</string>
    <string name="money_mark">￥</string>
    <string name="shop_update_confirm">确认修改</string>
	<string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">设置此昵称以后，在与iOS客户端demo聊天过程中，iOS一侧会显示此昵称而不是环信ID，如果对方使用安卓客户端则此设置不生效</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="push_nick">iOS离线推送昵称</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="add_public_group_chat">添加公开群</string>
    <string name="add_public_chat_room">添加聊天室</string>
    <string name="group_name">群聊名称</string>
    <string name="Group_chat_profile">群聊简介</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="Open_group_chat">公开的群聊</string>
    <string name="blacklist">黑名单列表</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="dismiss_group">解散群聊</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="Group_chat_information">群聊资料</string>
    <string name="Group_of_Lord">群主</string>
    <string name="Introduction">简介</string>
    <string name="To_join_the_chat">加入群聊</string>
    <string name="password">密码</string>
    <string name="confirmpassword">确认密码</string>
    <string name="downwaiting">正在下载文件请稍后</string>
    <string name="mute">静音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="unable_to_connect">不能连接到服务器</string>
    <string name="newchat">新建聊天</string>
    <string name="agree">同意</string>
    <string name="Group_chat">群聊:</string>
    <string name="not_download">未下载:</string>
	<string name="Please_enter_a_username">请输入用户名</string>
    <string name="is_down_please_wait">正在下载视频请稍候</string>
    <string name="Exit_the_group_chat">退出群聊</string>
    <string name="not_add_myself">不能添加自己</string>
    <string name="This_user_is_already_your_friend">此用户已是你的好友</string>
    <string name="Add_a_friend">加个好友呗</string>
    <string name="send_successful">发送请求成功,等待对方验证</string>
    <string name="Request_add_buddy_failure">请求添加好友失败:</string>
    <string name="Network_error">网络出错</string>
    <string name="Making_sure_your_location">正在确定你的位置...</string>
    <string name="please_check">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="expression">[表情]</string>
    <string name="Removed_from_the_failure">移出失败</string>
    <string name="be_removing">正在移出...</string>
    <string name="call_duration">通话时长</string>
</resources>