<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.team.dream.runlegwork.widget.BannerBrowsingWidget
        android:id="@id/banner_browing"
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_browsing_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="100dip"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/push_task"
                android:textSize="@dimen/default_title_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:text="@string/jie_task"
                android:textSize="@dimen/default_title_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:text="@string/custom_serivce"
                android:textSize="@dimen/default_title_text_size" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>