<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <com.team.dream.runlegwork.widget.TopBar
        android:id="@id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_paddingx1.5"
        android:background="@drawable/sp_input_frame"
        android:divider="@drawable/bg_pic_line"
        android:orientation="vertical"
        android:showDividers="middle" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:padding="@dimen/default_padding"
                android:src="@drawable/image_account" />

            <EditText
                android:id="@id/user_name"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:padding="@dimen/default_padding"
                android:src="@drawable/image_password" />

            <EditText
                android:id="@id/user_password"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_password"
                android:inputType="textPassword" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_paddingx1.5"
        android:background="@drawable/sl_submit"
        android:gravity="center"
        android:padding="@dimen/default_padding"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/default_submit_text_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_paddingx1.5"
        android:orientation="horizontal" >

        <TextView
            android:id="@id/at_once_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:text="@string/at_once_register"
            android:textColor="@color/at_once_reigister_color"
            android:textSize="@dimen/default_normal_text_size" />

        <TextView
            android:id="@id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/default_padding"
            android:text="@string/forget_password"
            android:textColor="@color/help_or_question_color"
            android:textSize="@dimen/default_normal_text_size" />
    </RelativeLayout>

</LinearLayout>