<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <com.team.dream.runlegwork.widget.MainTitileBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_logo"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
	
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/default_paddingx4"
        android:layout_marginRight="@dimen/default_paddingx4"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:padding="@dimen/default_padding"
                android:src="@drawable/image_account" />

            <EditText
                android:id="@id/user_name"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="phone" />
        </LinearLayout>
		<View 
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="#CCCCCC"
		    />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:padding="@dimen/default_padding"
                android:src="@drawable/image_password" />

            <EditText
                android:id="@id/user_password"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_password"
                android:inputType="textPassword" >
            </EditText>
        </LinearLayout>
        <View 
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="#CCCCCC"
		    />
        <TextView
        android:id="@id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sl_submit"
        android:layout_marginTop="@dimen/default_paddingx2"
        android:layout_marginBottom="@dimen/default_paddingx2"
        android:gravity="center"
        android:padding="@dimen/default_padding"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/default_submit_text_size" />
        
        
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@id/at_once_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at_once_register"
            android:textColor="@color/defualt_hint_color"
            android:textSize="@dimen/default_normal_text_size" />

        <TextView
            android:id="@id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forget_password"
            android:textColor="@color/defualt_hint_color"
            android:textSize="@dimen/default_normal_text_size" />
    </RelativeLayout>
    </LinearLayout>
</LinearLayout>
